--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.3.2",
+    "framer-motion": "^10.12.16",
     "next": "13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -17,11 +19,10 @@
     "react-redux": "^8.0.5",
     "react-simple-typewriter": "^5.0.1",
     "react-social-icons": "^5.15.0",
+    "react-toastify": "^9.1.1",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
-    "tailwind-scrollbar": "^2.1.0",
-    "react-toastify": "^9.1.1",
-    "@reduxjs/toolkit": "^1.9.1"
+    "tailwind-scrollbar": "^2.1.0"
   },
   "devDependencies": {
     "@iconify/react": "^4.1.0",
